--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div
               data-type="MobileMenu"
-              class="mobile-menu navigation-mobile-menu"
+              class="navigation-mobile-menu mobile-menu"
             >
               <div class="navigation-nav1">
                 <div class="navigation-container">
