--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
                 <span class="navigation-links-text3 navigation-Link">
                   <span>Menú</span>
                 </span>
+                <button
+                  class="navigation-links-register button-secondary button button-md"
+                >
+                  <span>Contactanos</span>
+                </button>
               </nav>
-              <button class="button-secondary button button-md">
-                <span>Contactanos</span>
-              </button>
             </div>
             <div data-type="BurgerMenu" class="navigation-burger-menu">
               <svg viewBox="0 0 1024 1024" class="navigation-icon">
@@ -126,6 +128,11 @@
                   <span class="navigation-links-text3 navigation-Link">
                     <span>Menú</span>
                   </span>
+                  <button
+                    class="navigation-links-register button-secondary button button-md"
+                  >
+                    <span>Contactanos</span>
+                  </button>
                 </nav>
               </div>
             </div>
