--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="home-container2">
                   <img
                     alt="image"
-                    src="public/playground_assets/dsc5963-1000w.webp"
+                    src="public/playground_assets/1-1000w.jpg"
                     class="home-image2"
                   />
                 </div>
@@ -226,7 +226,7 @@
                   <div class="services-card-container">
                     <img
                       alt="image"
-                      src="https://cdn-icons-png.flaticon.com/128/2558/2558995.png"
+                      src="https://cdn-icons-png.flaticon.com/128/701/701766.png"
                       class="services-card-image"
                     />
                   </div>
@@ -413,8 +413,8 @@
             </div>
           </div>
           <div class="home-contact">
+            <span class="home-text16">Contactame en</span>
             <div class="home-contact1">
-              <span class="home-text16">Contactanos en</span>
               <button class="button">
                 <span>
                   <span>WhatsApp</span>
@@ -426,9 +426,6 @@
                   ></path>
                 </svg>
               </button>
-            </div>
-            <div class="home-socials">
-              <span class="home-text20">Síguenos en</span>
               <button class="button">
                 <span>
                   <span>Instagram</span>
@@ -450,9 +447,9 @@
               src="public/playground_assets/logo-emilce_infante-sin_sombra-200h.png"
               class="home-image5"
             />
-            <span class="home-text24">
+            <span class="home-text23">
               <span>Designed by</span>
-              <span class="home-text26">Cristian Infante</span>
+              <span class="home-text25">Cristian Infante</span>
             </span>
           </footer>
         </div>
