--- a/index.html
+++ b/index.html
@@ -65,18 +65,11 @@
               <nav
                 class="navigation-links-nav navigation-links-root-class-name17"
               >
-                <span class="navigation-links-text navigation-Link">
-                  <span>Inicio</span>
+                <span class="navigation-links-text"><span>Inicio</span></span>
+                <span class="navigation-links-text1">
+                  <span>Servicios</span>
                 </span>
-                <span class="navigation-links-text1 navigation-Link">
-                  <span>Acerca</span>
-                </span>
-                <span class="navigation-links-text2 navigation-Link">
-                  <span>Portofolio</span>
-                </span>
-                <span class="navigation-links-text3 navigation-Link">
-                  <span>Menú</span>
-                </span>
+                <span class="navigation-links-text2"><span>Menú</span></span>
                 <button
                   class="navigation-links-register button-secondary button button-md"
                 >
@@ -116,18 +109,11 @@
                 <nav
                   class="navigation-links-nav navigation-links-root-class-name18"
                 >
-                  <span class="navigation-links-text navigation-Link">
-                    <span>Inicio</span>
+                  <span class="navigation-links-text"><span>Inicio</span></span>
+                  <span class="navigation-links-text1">
+                    <span>Servicios</span>
                   </span>
-                  <span class="navigation-links-text1 navigation-Link">
-                    <span>Acerca</span>
-                  </span>
-                  <span class="navigation-links-text2 navigation-Link">
-                    <span>Portofolio</span>
-                  </span>
-                  <span class="navigation-links-text3 navigation-Link">
-                    <span>Menú</span>
-                  </span>
+                  <span class="navigation-links-text2"><span>Menú</span></span>
                   <button
                     class="navigation-links-register button-secondary button button-md"
                   >
@@ -139,7 +125,7 @@
           </div>
         </header>
         <main class="home-main">
-          <div class="home-hero section-container">
+          <div class="home-inicio section-container">
             <div class="home-max-width max-content-container">
               <div class="home-heading-container">
                 <h1 class="home-text">
@@ -193,7 +179,7 @@
               </div>
             </div>
           </div>
-          <div class="home-services section-container">
+          <div class="home-servicios section-container">
             <div class="home-max-width1 max-content-container">
               <div class="home-heading-container1">
                 <div class="home-text-container">
@@ -261,12 +247,12 @@
               </div>
             </div>
           </div>
-          <div class="home-portofolio section-container">
+          <div class="home-men section-container">
+            <span class="home-text12">menú</span>
             <div class="home-max-width2 max-content-container">
               <div class="home-tab-selector-header">
-                <span class="home-text12 tab-selector-btn">Entradas</span>
-                <span class="home-text13 tab-selector-btn">Platos fuertes</span>
-                <span class="home-text14 tab-selector-btn">Bebidas</span>
+                <span class="home-text13 tab-selector-btn">Entradas</span>
+                <span class="home-text14 tab-selector-btn">Platos fuertes</span>
                 <span class="home-text15 tab-selector-btn">Pasabocas</span>
               </div>
               <div class="home-tab-selector-cards-container">
@@ -412,9 +398,9 @@
               </div>
             </div>
           </div>
-          <div class="home-contact">
-            <span class="home-text16">Contactame en</span>
-            <div class="home-contact1">
+          <div class="home-contacto">
+            <span class="home-text16">CONTACTAME EN</span>
+            <div class="home-contact">
               <button class="button">
                 <span>
                   <span>WhatsApp</span>
