--- a/index.html
+++ b/index.html
@@ -146,36 +146,36 @@
           <span class="home-text12">Menú</span>
           <div class="home-max-width2 max-content-container">
             <div class="home-tab-selector-header">
-              <span class="home-text13 tab-selector-btn">Entradas</span>
-              <span class="home-text14 tab-selector-btn">Platos fuertes</span>
-              <span class="home-text15 tab-selector-btn">Pasabocas</span>
+              <span id="entradas" class="home-text13 tab-selector-btn">Entradas</span>
+              <span id="pfuertes" class="home-text14 tab-selector-btn">Platos fuertes</span>
+              <span id="pasabocas" class="home-text15 tab-selector-btn">Pasabocas</span>
             </div>
             <div class="home-tab-selector-cards-container">
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name">
+              <div id="ipfuertes" class="portofolio-card-speaker-card portofolio-card-root-class-name">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Plato fuerte</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name5">
+              <div id="ientradas" class="portofolio-card-speaker-card portofolio-card-root-class-name5">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Entrada</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name4">
+              <div id="ipasabocas" class="portofolio-card-speaker-card portofolio-card-root-class-name4">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Pasaboca</span>
                 </span>
               </div>
               <div class="portofolio-card-speaker-card portofolio-card-root-class-name3">
