--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <span id="pasabocas" class="home-text15 tab-selector-btn">Pasabocas</span>
             </div>
             <div class="home-tab-selector-cards-container">
-              <div id="ipfuertes" class="portofolio-card-speaker-card portofolio-card-root-class-name">
+              <div id="ipfuertes" class="pfuertes portofolio-card-speaker-card portofolio-card-root-class-name">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
@@ -160,7 +160,7 @@
                   <span>Plato fuerte</span>
                 </span>
               </div>
-              <div id="ientradas" class="portofolio-card-speaker-card portofolio-card-root-class-name5">
+              <div id="ientradas" class="entradas portofolio-card-speaker-card portofolio-card-root-class-name5">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
@@ -169,7 +169,7 @@
                   <span>Entrada</span>
                 </span>
               </div>
-              <div id="ipasabocas" class="portofolio-card-speaker-card portofolio-card-root-class-name4">
+              <div id="ipasabocas" class="pasabocas portofolio-card-speaker-card portofolio-card-root-class-name4">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
@@ -178,58 +178,58 @@
                   <span>Pasaboca</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name3">
+              <div id="ientradas" class="entradas portofolio-card-speaker-card portofolio-card-root-class-name3">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Entrada 2</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name2">
+              <div id="ipasabocas" class="pasabocas portofolio-card-speaker-card portofolio-card-root-class-name2">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Pasaboca 2</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name1">
+              <div id="ipfuertes" class="pfuertes portofolio-card-speaker-card portofolio-card-root-class-name1">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Plato fuerte 2</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name6">
+              <div id="ipasabocas" class="pasabocas portofolio-card-speaker-card portofolio-card-root-class-name6">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Pasaboca 3</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name7">
+              <div id="ipfuertes" class="pfuertes portofolio-card-speaker-card portofolio-card-root-class-name7">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Plato fuerte 3</span>
                 </span>
               </div>
-              <div class="portofolio-card-speaker-card portofolio-card-root-class-name8">
+              <div id="ientradas" class="entradas portofolio-card-speaker-card portofolio-card-root-class-name8">
                 <div class="portofolio-card-image-container">
                   <img alt="image" src="public/playground_assets/dsc5898-400h.webp" class="portofolio-card-image" />
                   <div class="portofolio-card-see-project-container"></div>
                 </div>
                 <span class="portofolio-card-first-name">
-                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                  <span>Entrada 3</span>
                 </span>
               </div>
             </div>
